2008-04-12  Juanma Barranquero  <lekktu@gmail.com>

	* fileio.c (Fexpand_file_name): Add declaration for `p' missing in
	previous change.

2008-04-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fileio.c (Fexpand_file_name): Tighten the scope of `p' and `o' vars.
	Relocate `nm' after calling DECODE_FILE, in case the GC was run.

2008-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.h (map_keymap_canonical): Declare.
	* xmenu.c (single_keymap_panes): Use it.

2008-04-11  Glenn Morris  <rgm@gnu.org>

	* eval.c (Fdefvaralias): If the alias is bound and the target is not,
	set the target's value to that of the alias.

2008-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term.c (set_tty_color_mode): Left over typo.

2008-04-10  Michael Albinus  <michael.albinus@gmx.de>

	* fileio.c (Fmake_symbolic_link): Surround code by #ifdef S_IFLNK
	only after check for file name handler functions.  Signal, when
	native functionality is not supported.
	(syms_of_fileio): Declare it unconditionally.

2008-04-10  Jason Rumney  <jasonr@gnu.org>

	* w32menu.c (is_simple_dialog, simple_dialog_show): New functions.
	(Fx_popup_dialog): Handle simple yes/no questions as dialogs.

	* w32.c (logon_network_drive): Also logon to remote drives that
	are mapped to drive letters.

2008-04-10  Glenn Morris  <rgm@gnu.org>

	* xdisp.c (truncate-partial-width-windows): Doc fix.

2008-04-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fileio.c (read_file_name_cleanup, Fread_file_name_internal):
	Move functions to minibuffer.el.
	(syms_of_fileio): Don't declare them.

2008-04-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuf.c (Vcompletion_auto_help): Move to minibuffer.el.
	(syms_of_minibuf): Remove its initialization.

	* minibuf.c (temp_echo_area_glyphs): Remove unused function.

2008-04-09  Juanma Barranquero  <lekktu@gmail.com>

	* editfns.c (Ffield_string_no_properties): Fix typo in docstring.

2008-04-09  Jason Rumney  <jasonr@gnu.org>
